--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -12503,3 +12503,8 @@ admin_v2.question.ai_analysis.teacher_ebable: AI题目解析（教师端）
 admin_v2.question.ai_analysis.teacher_ebable.tip: 开启后，教师创建/导入题目时支持AI生成题目解析，生成的内容支持编辑修改。
 admin_v2.question.ai_analysis.student_ebable: AI题目解析（学员端）
 admin_v2.question.ai_analysis.student_ebable.tip: 开启后，教师未设置解析的题目，学员可自主生成AI解析。
+admin_v2.question.ai_analysis.Upgrade: 升级云能力
+admin_v2.question.ai_analysis.experience: , 体验强大的
+admin_v2.question.ai_analysis.problem: 题目解析
+admin_v2.question.ai_analysis.tittle: 构筑智慧教育新高地，云能力全面升级，引领深度互动与精准解析的Al题库新时代，开启个性化学习无限可能
+admin_v2.question.ai_analysis.upgrade_now: 立即升级
