--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -9519,6 +9519,8 @@ log.module.destroy_account_record: 帐号注销
 log.module.item_bank_exercise: 题库练习
 log.module.multi_class_assistant: 班课助教
 log.module.multi_class: 班课
+log.module.wrong_question: 错题
+log.module.ai: AI
 
 log.action.course.create: 创建课程
 log.action.course.update: 修改课程
