--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,22 @@
 CHANGELOG
 ==============
+24.2.3（2024-06-06）
+PC
+【新增】后台-题库管理：增加AI题目解析开关，可分别控制教师端、学员端AI题目解析展示入口。
+【新增】题库-创建题目、导入题目时，无解析的题目展示AI题目解析按钮，可根据题目内容生成AI题目解析。
+【新增】课程-作业、练习、考试任务-查看解析时，无解析的题目展示AI题目解析按钮，可根据题目内容生成AI题目解析。
+【新增】题库练习-章节练习、模拟考试-查看解析时，无解析的题目展示AI题目解析按钮，可根据题目内容生成AI题目解析。
+
+APP
+【新增】课程-作业、练习、考试任务-查看解析时，无解析的题目展示AI题目解析按钮，可根据题目内容生成AI题目解析。
+【新增】题库练习-章节练习、模拟考试-查看解析时，无解析的题目展示AI题目解析按钮，可根据题目内容生成AI题目解析。
+【修复】安卓app课程简介内容不显示。
+微网校
+【新增】课程-作业、练习、考试任务-查看解析时，无解析的题目展示AI题目解析按钮，可根据题目内容生成AI题目解析。
+【新增】题库练习-章节练习、模拟考试-查看解析时，无解析的题目展示AI题目解析按钮，可根据题目内容生成AI题目解析。
+积分插件
+【新增】积分管理-积分账户列表：当前积分支持按数量排序。
+
 24.2.2（2024-05-10）
 PC
 【修复】课时管理拖动顺序，刷新后又回到原位置。
