--- a/app/Resources/translations/js.zh_CN.yml
+++ b/app/Resources/translations/js.zh_CN.yml
@@ -271,6 +271,9 @@ activity.ppt_manage.media_error_hint: 请上传或选择PPT
 activity.ppt_manage.finish_detail_required_error_hint: 请输入至少观看多少分钟
 
 activity.testpaper_manage.media_required: 请选择试卷
+activity.testpaper_manage.media_type_required: 请选择试卷类型
+activity.testpaper_random: 随机卷
+activity.testpaper_regular: 固定卷
 activity.testpaper_manage.arithmetic_float_error_hint: 必须为正数，保留一位小数
 activity.testpaper_manage.positive_integer_error_hint: 必须为正整数
 activity.testpaper_manage.media_error_hint: 请选择试卷
