feat: #240620 update version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,17 @@
 CHANGELOG
 ==============
+24.2.4（2024-06-20）
+PC
+【修复】学员在微信内提交试卷后查看解析，向左滑动题目时页面出现黑屏。
+【修复】试卷问答题老师批阅后，学员端显示为0分。
+【修复】系统版本更新卡住不动。
+
+微网校
+【修复】新版微网校从我的订单页面点击课程，提示课程已关闭。
+
+APP
+【修复】安卓app 课程学习页，问答/话题 设为置顶后未置顶排序。
+
 24.2.3（2024-06-06）
 PC
 【新增】后台-题库管理：增加AI题目解析开关，可分别控制教师端、学员端AI题目解析展示入口。
