--- a/app/Resources/translations/js.en.yml
+++ b/app/Resources/translations/js.en.yml
@@ -2321,6 +2321,33 @@ question.bank.delete.tip.title: Are you sure you want to delete this question?
 question.bank.delete.tip.content: Deleting a question may affect the practice session of a lesson. Please proceed with caution!
 question.bank.head.edit: Title editing
 
+question.bank.paper.status: Status
+question.bank.paper.type: Type
+question.bank.paper.generating: Generating
+question.bank.paper.draft: Draft
+question.bank.paper.fail: Fail
+question.bank.paper.closed: Closed
+question.bank.paper.published: Published
+question.bank.paper.typeKeyword: Input keywords
+question.bank.paper.name: Name
+question.bank.paper.creator: Creator
+question.bank.paper.regular: Regular
+question.bank.paper.ai_personality: AI Personalized
+question.bank.paper.random: Random
+question.bank.paper.operation: Operation
+question.bank.paper.num: Amount
+question.bank.paper.numberOfItems/score: Number of items/Score
+question.bank.paper.creator/createdAt: Creator/Created Time
+question.bank.paper.selectAll: Select All
+question.bank.paper.selectedItems: Selected %select% items
+question.bank.paper.pageTotal: Total %total% items
+question.bank.paper.preview: Preview
+question.bank.paper.close: Close
+question.bank.paper.edit: Edit
+question.bank.paper.publish: Publish
+question.bank.paper.publish.success: Successfully published
+question.bank.paper.close.success: Successfully Closed
+
 classroom.category.choose.text: Please select a classroom category,
 course.category.choose.text: Please select a course category,
 classroom.services.choose.train: Practice,
