--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -9340,6 +9340,9 @@ exception.common_not_allowed_method: 'Method is not allowed'
 exception.common_expired_upload_token: 'Upload token is expired, please refresh the page'
 exception.common_not_found_api: 'API not found'
 
+exception.assessment_check_failed: 'Test paper creation check failed'
+exception.assessment_status_error: 'Assessment status error'
+
 exception.article.notfound: 'The article doesn''t exist'
 exception.article.not_found_category: Category is not exist
 exception.article.error_property: Property is wrong
