--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -10666,6 +10666,9 @@ exception.common_not_allowed_method: 不允许的方法
 exception.common_expired_upload_token: 上传授权码已过期，请刷新页面后重试
 exception.common_not_found_api: API资源不存在
 
+exception.assessment_check_failed: 试卷创建检查失败
+exception.assessment_status_error: 试卷状态错误
+
 exception.article.notfound: 资讯不存在!
 exception.article.not_found_category: 文章分类不存在,操作失败！
 exception.article.error_property: 属性不存在，更新失败！
