fix: #106115 试卷列表创建人/创建时间字段改为：更新人/更新时间

--- a/app/Resources/translations/js.en.yml
+++ b/app/Resources/translations/js.en.yml
@@ -2340,6 +2340,7 @@ question.bank.paper.random: Random
 question.bank.paper.operation: Operation
 question.bank.paper.num: Amount
 question.bank.paper.numberOfItems/score: Number of items/Score
+question.bank.paper.updatePerson/updatedAt: Update Person/Updated Time
 question.bank.paper.creator/createdAt: Creator/Created Time
 question.bank.paper.selectAll: Select All
 question.bank.paper.selectedItems: Selected %select% items
