--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -9351,6 +9351,7 @@ exception.common_not_found_api: 'API not found'
 
 exception.assessment_check_failed: 'Test paper creation check failed'
 exception.assessment_status_error: 'Assessment status error'
+exception.assessment_status_closed: 'Assessment closed'
 
 exception.article.notfound: 'The article doesn''t exist'
 exception.article.not_found_category: Category is not exist
