--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,14 @@
 CHANGELOG
 ==============
+24.3.1 (2024-07-29)
+PC
+【新增】随机试卷：根据题型或题型+分类设置题目数量、设置难度比例抽题组卷，学员在考试时随机抽取其中一份进行答题。
+【新增】AI个性卷：根据题型设置题目数量，设置错题比例，学员在题库考试时根据其最近的错题记录生成试卷，针对学员易错题反复练习，提升学员对知识的掌握度。
+微网校
+【新增】AI个性卷提示：学员作答AI个性卷时展示文字提示。
+APP
+【新增】AI个性卷提示：学员作答AI个性卷时展示文字提示。
+
 24.2.4（2024-06-20）
 PC
 【修复】学员在微信内提交试卷后查看解析，向左滑动题目时页面出现黑屏。
