--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 CHANGELOG
 ==============
+24.3.2 (2024-07-31)
+pc
+【修复】修复已知问题
+
 24.3.1 (2024-07-29)
 PC
 【新增】随机试卷：根据题型或题型+分类设置题目数量、设置难度比例抽题组卷，学员在考试时随机抽取其中一份进行答题。
