--- a/app/Resources/translations/menu.en.yml
+++ b/app/Resources/translations/menu.en.yml
@@ -913,6 +913,8 @@ admin_v2.system.user_content_ctrl.thread: Thread
 admin_v2.system.user_content_ctrl.private_message: Private Message
 admin_v2.system.user_content_audit_menu: Content Review Setting
 admin_v2.system.user_content_audit_tab: User Content Review Setting
+admin_v2_system.contract: Contract
+admin_v2_system.contract_manage: Contract Management
 
 # 系统-交易设置-资产设置
 admin_v2.system.asset_menu: Asset Setting
