--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -4646,6 +4646,7 @@ my.learning.testpaper_menu: 我的考试
 my.learning.group_menu: 我的小组
 user.certificate_menu: 我的证书
 my.wrong_question_book: 我的错题本
+my.contract: 我的合同
 
 my.course.refund_tips: 您的退款申请已提交，请等待管理员的处理。
 my.course.cancle_refund_btn: 取消退款，继续学习！
@@ -12517,3 +12518,7 @@ admin_v2.question.ai_analysis.experience: , 体验强大的
 admin_v2.question.ai_analysis.problem: 题目解析
 admin_v2.question.ai_analysis.tittle: 构筑智慧教育新高地，云能力全面升级，引领深度互动与精准解析的Al题库新时代，开启个性化学习无限可能
 admin_v2.question.ai_analysis.upgrade_now: 立即升级
+
+#电子合同
+admin_v2.contract.experience: ，体验安全的电子合同功能
+admin_v2.contract.tittle: 全新上线电子合同功能，带来高效、安全的签署体验，助力企业迈向数字化合规管理新阶段
