--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -11074,6 +11074,7 @@ exception.app.extract_failed: 无法解压缩安装包！
 exception.role.forbidden_modify: 该权限不能修改！
 exception.role.code_not_all_digital: code不能全为数字
 exception.content.not_found: 内容不存在
+exception.sign_record.is_existed: 合同已签署成功，无需再次签署
 exception.content.type_required: 内容类型不能为空
 exception.content.title_required: 内容标题不能为空
 exception.download_activity.not_download_activity: 不是下载资料活动
