--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,20 @@
 CHANGELOG
 ==============
+24.3.4 (2024-08-29)
+PC
+【新增】后台-电子合同管理：支持创建电子合同，对合同进行增删改查。
+【新增】课程/班级/题库管理：增加电子合同开关、强制签署开关，开启后选择电子合同模板，学员学习前需签署电子合同。
+【新增】课程/班级/题库开启电子合同后，学员开始学习前查看合同内容，输入个人信息和手写签名，完成签署后进入学习。
+【新增】我的合同：我的学习内新增我的合同查看签署的合同记录。
+【新增】后台-合同签署记录：查看学员签署的合同记录。
+【修复】班级学员管理：由教师添加的学员显示为管理员添加。
+APP
+【新增】课程/班级/题库开启电子合同后，学员开始学习前查看合同内容，输入个人信息和手写签名，完成签署后进入学习。
+【新增】我的合同：我的学习内新增我的合同查看签署的合同记录。
+微网校
+【新增】课程/班级/题库开启电子合同后，学员开始学习前查看合同内容，输入个人信息和手写签名，完成签署后进入学习。
+【新增】我的合同：我的学习内新增我的合同查看签署的合同记录。
+
 24.3.3 (2024-08-20)
 PC
 【新增】电子合同
