--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -3985,6 +3985,7 @@ my.learning.testpaper_menu: 'Tests'
 my.learning.group_menu: 'Groups'
 user.certificate_menu: 'My Certificate'
 my.wrong_question_book: 'My wrong question book'
+my.contract: 'My contract'
 my.course.refund_tips: 'Your have submitted the refund request, please wait for the response from admin.'
 my.course.cancle_refund_btn: 'Cancel the refund request to continue the learning'
 my.course.free_mode_plan.task_finished: Finished
