--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -10882,6 +10882,7 @@ exception.courseset.unpublished: 课程未发布
 exception.courseset.no_course: 课程中没有可用的教学计划
 exception.courseset.unlock_failed: 解锁课程失败
 exception.courseset.forbidden_create: 没有权限创建课程
+exception.courseset.forbidden_publish: 抱歉你无权限发布课程，请联系管理员
 exception.classroom.not_found: 班级不存在
 exception.classroom.forbidden_manage_classroom: 没有管理班级的权限
 exception.classroom.forbidden_take_classroom: 不能在这个班级学习
