--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -2641,7 +2641,7 @@ classroom.latest_join_member: 新加学员
 classroom.description_empty_tips: 暂无介绍！
 classroom.description: 介绍
 classroom.teachers: 师资
-classroom.itemBankBind: 班级题库
+classroom.itemBankBind: 题库
 classroom.reviews: 评价
 classroom.note: 笔记
 classroom.certificates: 班级证书
