--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,25 @@
 CHANGELOG
 ==============
+24.4.3 (2024-11-14)
+PC
+【新增】课程管理：增加题库练习管理，可选择绑定100个以内的题库练习，绑定后课程学员获得题库练习答题权限。
+【新增】班级管理：增加题库练习管理，可选择绑定100个以内的题库练习，绑定后班级学员获得题库练习答题权限。
+【新增】题库练习-学员管理：展示学员加入题库练习的方式（XX课程 /班级加入）。
+【新增】课程商品页和学习页增加题库栏目，展示课程绑定的题库练习列表。
+【新增】班级商品页和学习页增加题库栏目，展示班级绑定的题库练习列表。
+【新增】提交课程和班级订单时，展示已绑定的题库练习列表，显示购买课程和班级后可免费获得绑定的题库练习。
+【新增】我的题库：显示学员加入题库的方式（XX课程/班级赠送的题库）。
+微网校
+【新增】课程商品页和学习页增加题库栏目，展示课程绑定的题库练习列表。
+【新增】班级商品页学习页增加题库栏目，展示班级绑定的题库练习列表。
+【新增】提交课程和班级订单时，展示已绑定的题库练习列表，显示购买课程和班级后可免费获得绑定的题库练习。
+【新增】我的题库：显示学员加入题库的方式（XX课程/班级赠送的题库）。
+APP：
+【新增】课程商品页和学习页增加题库栏目，展示课程绑定的题库练习列表。
+【新增】班级商品页学习页增加题库栏目，展示班级绑定的题库练习列表。
+【新增】提交课程和班级订单时，展示已绑定的题库练习列表，显示购买课程和班级后可免费获得绑定的题库练习。
+【新增】我的题库：显示学员加入题库的方式（XX课程/班级赠送的题库）。
+
 24.4.2 (2024-10-31)
 PC
 【新增】题干或解析上传附件的位置增加删除功能，且删除后不显示这个提示框【新增】资讯、自定义页面、课程/班级 /题库简介、课程图文任务支持复制粘贴图文（MAC电脑图文粘贴只显示文字）
