--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -9724,6 +9724,7 @@ exception.opencourse.is_not_member: You are not member of course
 exception.opencourse.check_password_required: Did not enter the correct verification password
 exception.opencourse.replay_not_permitted: Live replay is set to not allowed to watch
 exception.opencourse.live_start_time_outdated: Live start time outdated
+exception.opencourse.delete_published_lesson: Published lesson can not be deleted
 exception.blacklist.forbidden_take: Permission denied
 exception.blacklist.duplicate_add: Already in the blacklist, don't add it repeatedly
 exception.blacklist.not_found: Blacklist does not exist
