--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -11059,6 +11059,7 @@ exception.opencourse.check_password_required: 未输入正确的校验密码
 exception.opencourse.replay_not_permitted: 直播回放被设置为不允许观看
 exception.opencourse.live_start_time_outdated: 直播开始时间应晚于当前时间
 exception.opencourse.delete_published_lesson: 不能删除已发布的课时
+exception.opencourse.lesson_num_limit: 最多可添加300个课时
 exception.blacklist.forbidden_take: 没有权限
 exception.blacklist.duplicate_add: 已在黑名单中，不要重复添加
 exception.blacklist.not_found: 黑名单不存在
