--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -5523,6 +5523,8 @@ admin.open_manage.manage.number_th: 编号
 admin.open_manage.manage.name_th: 名称
 admin.open_manage.manage.status_th: 状态
 admin.open_manage.manage.creator_th: 创建者
+admin.open_manage.manage.live_num: 直播数量
+admin.open_manage.manage.hit_num: 观看人次
 admin.open_manage.manage.operater_th: 操作
 admin.open_manage.manage.recommend: >
   荐：%recommendedTime% / 序号：%recommendedSeq%
