feat: #108860 常规公开课列表添加直播数量和观看人次

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -4679,6 +4679,7 @@ admin.open_manage.manage.status_th: Status
 admin.open_manage.manage.creator_th: Creator
 admin.open_manage.manage.live_num: Live Num
 admin.open_manage.manage.hit_num: 'Watch Person-time'
+admin.open_manage.manage.hit_num.tooltip: Statistics of the cumulative viewing time of each open course. Each viewing time of each user (including logged in and not logged in) is counted as one, and multiple viewing times are counted
 admin.open_manage.manage.operater_th: Action
 admin.open_manage.manage.recommend: "Recommended：%recommendedTime% / SN：%recommendedSeq% "
 admin.open_manage.manage.manage_btn: Config
