--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -4677,7 +4677,7 @@ admin.open_manage.manage.number_th: Id
 admin.open_manage.manage.name_th: Name
 admin.open_manage.manage.status_th: Status
 admin.open_manage.manage.creator_th: Creator
-admin.open_manage.manage.live_num: Live Num
+admin.open_manage.manage.live_num: Lesson Num
 admin.open_manage.manage.hit_num: 'Watch Person-time'
 admin.open_manage.manage.hit_num.tooltip: Statistics of the cumulative viewing time of each open course. Each viewing time of each user (including logged in and not logged in) is counted as one, and multiple viewing times are counted
 admin.open_manage.manage.operater_th: Action
