feat: #241212 更新版本和changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,19 @@
 CHANGELOG
 ==============
+24.4.5 (2024-12-12)
+PC
+【新增】直播公开课课时管理，可增加多个直播和回放。
+【修复】富文本编辑器缩进和序号展示问题
+【修复】材料题题干附件不展示删除按钮。
+【修复】其它已知bug。
+App
+【新增】直播公开课详情页目录，可浏览多个直播和回放。
+【修复】其它已知bug。
+
+微网校
+【新增】直播公开课详情页目录，可浏览多个直播和回放。
+【修复】其它已知bug。
+
 24.4.4 (2024-11-28)
 PC
 【新增】课程下载资料任务：支持在线预览资料内容。
