--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -11249,6 +11249,8 @@ material.common_table.file.local: 本地
 material.common_table.quality.sd: 标清
 material.common_table.quality.hd: 高清
 material.common_table.quality.shd: 超清
+material.common_table.quality.2k: 2K
+material.common_table.quality.4k: 4K
 material.common_table.transcode_waiting: 等待转码
 material.common_table.transcode_file_not_support: 文件不支持
 material.common_table.transcode_success: 转码成功
