--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -6818,6 +6818,7 @@ admin.developer_setting.app_center_api_address: 'Application Center API address'
 admin.developer_setting.es_live_api_server: ES Live API
 admin.developer_setting.question_parse_api_server: Question Parse API
 admin.developer_setting.ai_api_server: AI API address
+admin.developer_setting.resource_api_server: 'Resource API address'
 admin.developer_face_address: AI Face API address
 admin.developer_push_address: Push API address
 admin.developer_setting.cloud_api_server_address: 'Cloud services API address'
