--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -8228,6 +8228,7 @@ admin.magic_setting.biz_answer_scene_report_threshold_tip: 默认值15000
 admin.magic_setting.security_video_player: 安全播放器开关
 admin.magic_setting.enable_marketing_mall_alpha_test: 商城内测开关
 admin.magic_setting.enable_marketing_mall_license: 商业授权开关
+admin.magic_setting.enable_cache_video_on_playing: 边播边缓存开关
 
 admin.magic_setting.one_for_open: 1为启用
 admin.magic_setting.one_for_close: 1为关闭
