--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -225,6 +225,7 @@ paginator.jump: Jump
 paginator.page: Page
 user: User
 user.not_exist: 'User is not exist'
+user.fields.id: 'User ID'
 user.fields.login_password: 'Login password'
 user.fields.pay_password: 'Payment password'
 user.fileds.microblog: Weibo
