feat: #250109 update changelog and version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,19 @@
 CHANGELOG
 ==============
+25.1.1 (2025-01-09)
+PC
+【新增】超精细模式下新上传的视频任务播放时根据原视频分辨率，最高支持4K清晰度。
+【新增】首页、列表页、班级课程列表中的课程封面增加4K/2K标志，标志内容根据课程内视频任务的最高清晰度展示。
+【新增】课程详情页学习目录、任务学习页目录中的视频任务增加4K/2K标志，标志内容根据视频清晰度展示。
+App
+【新增】超精细模式下新上传的视频任务播放时根据原视频分辨率，最高支持4K清晰度。
+【新增】首页、列表页、班级课程列表中的课程封面增加4K/2K标志，标志内容根据课程内视频任务的最高清晰度展示。
+【新增】课程详情页学习目录、任务学习页目录中的视频任务增加4K/2K标志，标志内容根据视频清晰度展示。
+微网校
+【新增】超精细模式下新上传的视频任务播放时根据原视频分辨率，最高支持4K清晰度。
+【新增】首页、列表页、班级课程列表中的课程封面增加4K/2K标志，标志内容根据课程内视频任务的最高清晰度展示。
+【新增】课程详情页学习目录、任务学习页目录中的视频任务增加4K/2K标志，标志内容根据视频清晰度展示。
+
 24.4.5 (2024-12-12)
 PC
 【新增】直播公开课课时管理，可增加多个直播和回放。
