feat: #109054 修改中英文翻译

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -223,6 +223,7 @@ paginator.nextPage: 'Next'
 paginator.lastPage: 'Last'
 paginator.jump: Jump
 paginator.page: Page
+staff.fields.id: 'Staff ID'
 user: User
 user.not_exist: 'User is not exist'
 user.fields.id: 'User ID'
