--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,27 @@
 CHANGELOG
 ==============
+25.1.2 (2025-01-16)
+PC
+【新增】后台-App发现页-图文导航设置：支持添加自定义链接和题库列表。
+【新增】课程、题库、班级学员动态中不显示全部用户名。
+【修复】学员账号点击AI个性卷页面空白。
+【修复】公开课直播和回放链接统一，且永久有效期。
+App
+【新增】图文导航支持跳转至自定义链接和题库列表页。
+【新增】课程、题库、班级学员动态中不显示全部用户名。
+【优化】未开启注册功能时，登录页面不展示注册账号入口。
+【优化】登录页面默认展示账号密码登录。
+【优化】关闭云短信后，不展示短信验证码登录页面。
+【优化】查看收藏题目的交互体验。
+【优化】在题库练习答题时返回章节练习列表页后定位到刚刚答过的章节。
+【优化】答题页面保存、提交、查看解析按钮不明显的问题。
+【修复】关闭即时聊天后，班级简介不展示讨论组入口。
+【修复】课程考试设置不合格不能查看答案和解析，APP可以查看详情和解析。
+【修复】已关闭的课程APP上能通过日历进入查看直播和回放。
+微网校
+【优化】在题库练习答题时返回章节练习列表页后定位到刚刚答过的章节。
+【优化】答题页面保存、提交、查看解析按钮不明显的问题。
+
 25.1.1 (2025-01-09)
 PC
 【新增】超精细模式下新上传的视频任务播放时根据原视频分辨率，最高支持4K清晰度。
