feat: #250220 更新changelog和版本

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,16 @@
 CHANGELOG
 ==============
+25.1.4 (2025-02-20)
+PC
+【新增】后台-App发现页-图文导航设置：支持选择全部。
+【新增】微网校轮播图添加链接-选择课程/班级弹窗默认显示已发布的课程/班级。
+【修复】课程内修改“章”名称无效。
+【修复】PC端首页导航栏点击跳转页面与自适应微网校跳转页面不一致。
+【修复】题库练习下架状态下可修改有效期。
+【修复】添加课程时选择导入bilibili视频页面链接提示“解析哔哩哔哩视频ID失败”。
+微网校
+【修复】新版微网校-班级无购买按钮。
+
 25.1.3 (2025-02-06)
 PC
 【修复】修复已知问题
