feat: #110704 强制员工升级密码强度

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -9392,6 +9392,7 @@ exception.user.mobile_not_found: 'User mobile is not found'
 exception.user.user_is_destroyed: User is destroyed
 exception.user.email_password_error: The email password is incorrect
 exception.user.already_bind: The user is already bound
+exception.user.password_require_upgrade: 'Password strength needs to be upgraded'
 exception.sensitive.words: 'The content contains sensitive words!'
 exception.thread.frequent: 'Reply too many times, please try it later!'
 exception.thread.not_found: Topic does not exist
