--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -2639,6 +2639,7 @@ form.btn.confirm.normal: 'Confirm normal'
 form.btn.confirm.illegal: 'Confirm illegal'
 form.btn.batch.normal: 'Batch normal'
 form.btn.batch.illegal: 'Batch illegal'
+form.btn.send_verify_email: 'Send verify email'
 
 user.login.account_type_label: 'Email / phone numbers / username'
 user.login.content_title: 'Sign in'
@@ -3087,6 +3088,10 @@ user.cards.used: Used
 user.cards.outdate: Expired
 user.cards.invalid: Invalid
 user.cards.moneycard_not_install_tips: 'The %coin_name% feature is not enabled. The learning card cannot be used.'
+user.verify: 'User Verify'
+user.verify.email_sending: 'A verification email is being sent'
+user.verify.email_sent: 'Check the email and click on the link in the email to verify.'
+
 notification: Notification
 notification.user_notification: Notification
 notification.user_notification.content_title: Notification
@@ -9413,6 +9418,7 @@ exception.rate_limit_error_captcha: Graphic verification code error!
 exception.sms.setting_enable: Cloud SMS related settings are not enabled!
 exception.setting.attachment.setting_enable: Cloud Attachement settings are not enabled!
 exception.setting.app_client_closed: App client closed!
+exception.setting.mail_disable: 'The email service is not enabled on the network school. Please contact the administrator'
 exception.sms.code_invalid: SMS verification code error
 exception.sms.type_error: Sms type error
 exception.sms.send_failed: Failed to send!
