feat: #250316 update version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,19 @@
 CHANGELOG
 ==============
+25.1.5 (2025-03-16)（升级前需开启云邮件服务）
+PC
+【新增】后台-系统-用户设置-注册：邮箱验证登录默认开启。
+【新增】后台-系统-用户设置-注册：注册防护机制，可设置“中、高”等级，默认高。
+【新增】后台-系统-用户设置-注册：删除密码等级设置，默认“高”等级不可修改。
+【新增】后台-系统-用户设置-登录：默认开启用户登录保护机制
+【新增】登录时密码等级不是“高”等级的用户，必须修改密码。
+
+微网校
+【新增】登录时密码等级不是“高”等级的用户，必须修改密码。
+
+App
+【新增】登录时密码等级不是“高”等级的用户，必须修改密码。
+
 25.1.4 (2025-02-20)
 PC
 【新增】后台-App发现页-图文导航设置：支持选择全部。
