--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -8166,6 +8166,7 @@ admin.developer_setting.app_center_api_address: 应用中心API地址
 admin.developer_setting.es_live_api_server: 自研直播API地址
 admin.developer_setting.question_parse_api_server: 题目解析API地址
 admin.developer_setting.ai_api_server: AI API地址
+admin.developer_setting.push_api_server: 新 Push API地址
 admin.developer_setting.resource_api_server: 资源 API地址
 admin.developer_face_address: 人脸识别API地址
 admin.developer_push_address: 消息推送API地址
